--- a/src/app/play-list/play-list.component.css
+++ b/src/app/play-list/play-list.component.css
@@ -45,13 +45,14 @@
 
 }
 .input-volume{
-  position: absolute;
+  position: fixed;
   right: 6px;
 }
 .footer-buttom{
-  display: inline-block;
-  margin:0 auto;
+  position: fixed;
   width:200px;
+  bottom: 10px;
+  left: 1100px;
 }
 .button-footer{
   background-color: #FF7676;
@@ -77,9 +78,21 @@
 }
 .name-song{
   align-items: center;
+  font-weight: bold;
 }
 .div-name-song{
   float: left;
   margin-left: 5px;
+  width: 500px;
 
 }
+.main-footer{
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+}
+.icon-pause{
+  position: fixed;
+  right: 160px;
+}
+
