--- a/src/app/play-list/play-list.component.html
+++ b/src/app/play-list/play-list.component.html
@@ -18,22 +18,29 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
-<footer>
+<footer class="main-footer">
   <div class="footer" style="display: flex">
     <div class="img-footer">
       <img style="height: 100%" [src]="getAlbum.cover_small">
     </div>
     <div class="div-name-song">
       <span class="name-song">{{this.title}}</span>
+      <span *ngIf="this.title && this.artist"> - </span>
       <span class="name-song">{{this.artist}}</span>
     </div>
     <div class="footer-buttom">
       <button class="button-footer2" (click)="back()"><i class="fas fa-step-backward"></i></button>
-      <button class="button-footer" (click)="play()"><i class="fas fa-play"></i></button>
+      <button class="button-footer" (click)="play()">
+        <i *ngIf="!reproduciendo" class="fas fa-play"></i>
+        <i *ngIf="reproduciendo" class="fas fa-pause"></i></button>
       <button  class="button-footer2" (click)="next()"><i class="fas fa-step-forward"></i></button>
     </div>
+    <div class="icon-pause">
+      <i *ngIf="sound" (click)="pause()" class="fas fa-volume-up"></i>
+      <i *ngIf="!sound" (click)="pause()" class="fas fa-volume-mute"></i>
+    </div>
     <div class="input-volume" style="display: flex">
-      <input type="range" min="0" max="1" step="0.01" value="0.1" (input)="setVolume($event)">
+      <input type="range" min="0" max="1" step="0.01" value="0.5" (input)="setVolume($event)">
     </div>
   </div>
 
